Bug 54540 - Editing styles should not emit #RRGGBBAA colors
Summary: Editing styles should not emit #RRGGBBAA colors
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: HTML Editing (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 54539
  Show dependency treegraph
 
Reported: 2011-02-16 03:05 PST by Andreas Kling
Modified: 2011-02-16 18:55 PST (History)
1 user (show)

See Also:


Attachments
Proposed patch (12.46 KB, patch)
2011-02-16 03:10 PST, Andreas Kling
rniwa: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kling 2011-02-16 03:05:45 PST
The StyleChange::fontColor() is currently created from Color::nameForRenderTreeAsText() which is incorrect as these colors may be exposed to the web.
Comment 1 Andreas Kling 2011-02-16 03:10:32 PST
Created attachment 82608 [details]
Proposed patch
Comment 2 Ryosuke Niwa 2011-02-16 17:35:48 PST
Comment on attachment 82608 [details]
Proposed patch

We definitely need a test for this.
Comment 3 Ryosuke Niwa 2011-02-16 17:54:37 PST
Comment on attachment 82608 [details]
Proposed patch

Oops, I didn't see the additional test case in inline-style-container.js.  I take back my r- and r+ it.  Please rephrase the change log entry to mention the test case is added to inline-style-container.js.
Comment 4 Ryosuke Niwa 2011-02-16 17:55:12 PST
Note that Firefox 3.6 also emits lowercase color code so new behavior shouldn't break most of websites.
Comment 5 Andreas Kling 2011-02-16 18:55:27 PST
Committed r78773: <http://trac.webkit.org/changeset/78773>